# marketplace-interface

./: README.md  config.py  main.py  marketplace.py  pyproject.toml  wb.py
marketpalce_handler/: mapping.py  validators.py  wb.py
marketplace_handler.egg-info/: SOURCES.txt
tests/: conftest.py
