[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["derijablya <dulugov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
python-dotenv = "^1.0.1"
black = "^24.3.0"
pydantic = "^2.6.1"
ruff = "^0.2.1"
setuptools = "^70.0.0"
wheel = "^0.42.0"
twine = "^5.0.0"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
aiohttp = "^3.10.2"
aioresponses = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
